--- a/COVID-19-curve.ipynb
+++ b/COVID-19-curve.ipynb
@@ -1016,45 +1016,8 @@
     }
    ],
    "source": [
+    "#Prediction for the next day:\n",
     "func(yData.size, *popt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "605.0"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yData[yData.size-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xData=np.append(xData, xData.size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yData=np.append(yData, yData[yData.size-1]*0.95)"
    ]
   }
  ],
