--- a/COVID-19-curve.ipynb
+++ b/COVID-19-curve.ipynb
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "#This dataset is a mess and its format changes every other day :-(\n",
-    "# now, when CASOS = 0, we fill that column with sum of 'PCR+' + 'TestAc+'\n",
+    "# now, when CASOS == 0, we fill that column with sum of 'PCR+' + 'TestAc+'\n",
     "\n",
     "df.fillna(0, inplace=True)\n",
     "df.loc[(df['CASOS']==0), 'CASOS'] = df['PCR+'] + df['TestAc+']"
