--- a/COVID-19-curve.ipynb
+++ b/COVID-19-curve.ipynb
@@ -468,10 +468,12 @@
     "    df=df.sort_values(by='FECHA')\n",
     "    df['Index'] = range(1, len(df) + 1)\n",
     "    df=df.set_index('Index')\n",
+    "    title=columnName\n",
     "    if dif:\n",
     "        graphColumn='Dif'\n",
     "        df['Dif'] = df[columnName] - df[columnName].shift(1)\n",
     "        df.fillna(0, inplace=True)\n",
+    "        title=columnName + ' diarios.'\n",
     "        df.drop(columnName, axis=1, inplace=True)\n",
     "    else:\n",
     "        graphColumn=columnName\n",
@@ -488,10 +490,10 @@
     "    ax.bar(xData, yData, align='center', color=colorName, alpha=0.8)\n",
     "    try:\n",
     "        popt, pcov = curve_fit(skew_normal, xData, yData, p0=(np.argmax(yData),np.argmax(yData),1,np.max(yData)*yData.size/2))\n",
-    "        ax.title.set_text(columnName+' - '+region[codigo2digitos])\n",
+    "        ax.title.set_text(title+' - '+region[codigo2digitos])\n",
     "        ax.plot(xFit, skew_normal(xFit, *popt), 'r')\n",
     "    except:\n",
-    "        ax.title.set_text(region[codigo2digitos] + \" - NO CONVERGE\")\n",
+    "        ax.title.set_text(title+' - '+region[codigo2digitos] + \" - NO CONVERGE\")\n",
     "        ax.plot(xFit, (lambda x: np.zeros(x.size))(xFit), 'r')\n",
     "    finally:\n",
     "        oPlot.add_plot(ax) # pass it to the FlowLayout to save as an image\n",
