--- a/COVID-19-curve.ipynb
+++ b/COVID-19-curve.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/markdown": [
-       "## COVID-19 en España. Datos tomados de https://covid19.isciii.es"
+       "## COVID-19 en España. Datos tomados de https://cnecovid.isciii.es"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -34,7 +34,7 @@
     "from IPython.display import display, Markdown\n",
     "import datetime\n",
     "today = datetime.date.today()\n",
-    "display(Markdown('## COVID-19 en España. Datos tomados de https://covid19.isciii.es'))\n",
+    "display(Markdown('## COVID-19 en España. Datos tomados de https://cnecovid.isciii.es/'))\n",
     "display(Markdown('#### Consultado el ' + today.strftime(\"%d/%m/%Y\")))"
    ]
   },
@@ -143,7 +143,7 @@
    "source": [
     "#Download data from official source\n",
     "\n",
-    "url=\"https://covid19.isciii.es/resources/serie_historica_acumulados.csv\"\n",
+    "url=\"https://cnecovid.isciii.es/covid19/resources/agregados.csv\"\n",
     "csvdoc=requests.get(url).content\n",
     "df=pd.read_csv(io.StringIO(csvdoc.decode('ISO-8859-1')), error_bad_lines=False)\n",
     "\n",
